#295, #292, #296 - Moved tables definitions to a core JS piece and started the tables with html5 attributes. Fixes to layout issues on #292. Fixes to missing buttons on #295. Fixes to filters on #296.

--- a/assets/css/custom-styles2.css
+++ b/assets/css/custom-styles2.css
@@ -482,21 +482,6 @@ div.bar-chart {
 }
 
 
-div.dataTables_wrapper {
-  width: 100%;
-  margin: 0 auto;
-}
-table.dataTable {
-  border: none;
-}
-table.dataTable.stripe tbody tr.odd, table.dataTable.display tbody tr.odd{
-
-}
-
-table.dataTable thead th {
-  background-image: none !important;
-}
-
 
 /* alternative styles added by Anwar */
 button.altSIbut, div.altSIbut {border:none;background:none;padding:0px;margin-top:7px}
